--- a/E-merceCloud/Base.lproj/Main.storyboard
+++ b/E-merceCloud/Base.lproj/Main.storyboard
@@ -202,6 +202,7 @@
                                             <outlet property="productImage" destination="cKY-8t-5bp" id="wBf-9F-0SK"/>
                                             <outlet property="productName" destination="cax-g8-06s" id="DzA-hb-nff"/>
                                             <outlet property="productPrice" destination="m9U-TE-jky" id="V36-zo-kuK"/>
+                                            <segue destination="TCA-sl-JmB" kind="show" identifier="productDetail" id="j7m-ce-2ms"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -224,6 +225,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yjt-aV-FSc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="905" y="773"/>
+        </scene>
+        <!--Product Detail View Controller-->
+        <scene sceneID="JXH-vf-Jda">
+            <objects>
+                <viewController id="TCA-sl-JmB" customClass="ProductDetailViewController" customModule="E_merceCloud" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ho8-dq-mrK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="850"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Fd-na-wgh">
+                                <rect key="frame" x="0.0" y="64" width="375" height="786"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rcu-Rz-IYv">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="900"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXJ-lB-zvP">
+                                                <rect key="frame" x="8" y="17" width="342" height="37"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QCp-E1-FAA">
+                                                <rect key="frame" x="15" y="452" width="345" height="170"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="900" id="hgk-YH-UIR"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b9d-iK-7hZ">
+                                        <rect key="frame" x="10" y="74" width="343" height="309"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q6n-Pj-Eos">
+                                        <rect key="frame" x="20" y="406" width="146" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Rcu-Rz-IYv" firstAttribute="leading" secondItem="7Fd-na-wgh" secondAttribute="leading" id="Iic-yB-bjZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="Rcu-Rz-IYv" secondAttribute="trailing" id="Juj-Gq-z2w"/>
+                                    <constraint firstAttribute="bottom" secondItem="Rcu-Rz-IYv" secondAttribute="bottom" id="N0K-qn-nNW"/>
+                                    <constraint firstItem="Rcu-Rz-IYv" firstAttribute="top" secondItem="7Fd-na-wgh" secondAttribute="top" id="ZDk-lW-2we"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7Fd-na-wgh" firstAttribute="bottom" secondItem="xQ0-cq-acz" secondAttribute="bottom" id="SI2-xk-RIk"/>
+                            <constraint firstItem="7Fd-na-wgh" firstAttribute="trailing" secondItem="xQ0-cq-acz" secondAttribute="trailing" id="TL2-km-eCv"/>
+                            <constraint firstItem="7Fd-na-wgh" firstAttribute="top" secondItem="xQ0-cq-acz" secondAttribute="top" id="WQA-Ui-fRl"/>
+                            <constraint firstItem="7Fd-na-wgh" firstAttribute="leading" secondItem="xQ0-cq-acz" secondAttribute="leading" id="ZnE-Dh-nn7"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xQ0-cq-acz"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="850"/>
+                    <connections>
+                        <outlet property="nameLbl" destination="LXJ-lB-zvP" id="XIG-vl-whD"/>
+                        <outlet property="productImage" destination="b9d-iK-7hZ" id="xgT-gU-nen"/>
+                        <outlet property="productPrice" destination="q6n-Pj-Eos" id="woj-lJ-Vdj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g1C-w4-9nU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1669.5999999999999" y="876.1619190404798"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="n2W-M7-AId">
