--- a/E-merceCloud/Base.lproj/Main.storyboard
+++ b/E-merceCloud/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="04Y-O4-2G0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="04Y-O4-2G0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -545,21 +545,39 @@
                         <segue destination="Lod-5P-uZX" kind="relationship" relationship="viewControllers" id="Efg-A1-QHr"/>
                         <segue destination="nfk-WX-Pwg" kind="relationship" relationship="viewControllers" id="HoQ-3Q-VTb"/>
                         <segue destination="kD1-cu-v5L" kind="relationship" relationship="viewControllers" id="r3t-oN-cJ0"/>
+                        <segue destination="kM5-e8-0tU" kind="relationship" relationship="viewControllers" id="USu-jQ-M8w"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GVY-ST-Wip" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-394" y="2525"/>
         </scene>
+        <!--Cart-->
+        <scene sceneID="tG3-Xp-tkf">
+            <objects>
+                <viewController id="kM5-e8-0tU" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mdC-eU-upc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="oOF-OV-MSA"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Cart" image="shopping-cart" id="TSj-7v-nkP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TRP-Lx-HPY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-394" y="3541"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="375.75" height="255"/>
-        <image name="company" width="18" height="18"/>
-        <image name="email" width="19.200000762939453" height="19.200000762939453"/>
-        <image name="home" width="18" height="18"/>
-        <image name="locked" width="18" height="18"/>
-        <image name="package" width="19.200000762939453" height="19.200000762939453"/>
-        <image name="user" width="19.200000762939453" height="19.200000762939453"/>
+        <image name="Logo" width="501" height="340"/>
+        <image name="company" width="24" height="24"/>
+        <image name="email" width="24" height="24"/>
+        <image name="home" width="24" height="24"/>
+        <image name="locked" width="24" height="24"/>
+        <image name="package" width="24" height="24"/>
+        <image name="shopping-cart" width="24" height="24"/>
+        <image name="user" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Pv1-Ba-YeE"/>
